# RedActa

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  web_ui_stepped.py
config/: models.colab.json  models.example.json
docs/: ARCHITECTURE.md  CAPABILITY_BACKLOG.md  CAPABILITY_LEVELS.md  DETERMINISTIC_INTENT_AND_MARKER_PIPELINE_REPORT.md  LEVEL_1_CASES.md
notebooks/: demo.ipynb  demo_local.ipynb
scripts/: run_batch1.ps1  run_case.ps1
src/agents_sdk_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/graph_pipeline/: amendment_analyzer.py  candidate_ledger.py  cli.py  colab_runner.py  config.py  document_graph.py  editor_v2.py  graph_pipeline.py  operation_registry.py  pipeline_checklist.py  post_operation_validation.py  prompt_loader.py  resolver.py  resolver_v2.py  revision_markers.py  run_case.py  semantic_embeddings.py  service_tables.py  skeleton_builder.py  utils.py  validator.py
src/redacta/: amendment_analyzer.py  base_agent.py  base_analyzer.py  case_loader.py  cli.py  config.py  deterministic_intent_extractor.py  document_classifier.py  editor.py  editor_v2.py  manual_review.py  ooxml_reader.py  pipeline.py  resolver_v2.py  revision_markers.py  run_case.py  schema.py  semantic_embeddings.py  utils.py  validation_checklist_builder.py
tests/integration/: test_cli_smoke.py
tests/unit/: test_amendment_analyzer_normalization.py  test_base_prompt_loading.py  test_candidate_ledger.py  test_colab_runner.py  test_dead_code_removal.py  test_deterministic_intent_extractor.py  test_document_graph.py  test_docx_eval_tool.py  test_editor_decimal_point_refs.py  test_editor_v2_drift.py  test_manual_review.py  test_operation_registry.py  test_post_operation_validation.py  test_resolved_operation_metadata.py  test_resolver_point_ref_candidates.py  test_revision_markers.py  test_service_table_revision_reference.py  (+2 more)
tools/: eval_compare_docx.py
(+13 files in other folders)
