[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "redacta"
version = "0.1.0"
description = "Pipeline for automated legal document amendment processing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.76.0",
    "python-docx>=1.1.2",
]

[project.scripts]
redacta = "redacta.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
redacta = [
    "prompts/*.txt",
    "prompts/*.md",
    "amendment_analysis/prompts/*.txt",
]
